<resources>
    <string name="app_name">Staddle Vendor</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_mail"><u>vendorsupport@staddle.in</u></string>
    //========================== App below Title ==========================
    <string name="staddle_merchant">Staddle Merchant</string>
    //========================== App Title =================================
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget password</string>
    <string name="about">About</string>
    <string name="add_offers">Add Offers</string>
    <string name="add_menu">Add Service</string>
    <string name="add_vsubcat">Add SubCategory</string>
    <string name="add_offer">Add Offer</string>
    <string name="contact_us">Contact Us</string>
    <string name="policy">Policy</string>
    <string name="services">Services</string>
    <string name="wallet">Wallet</string>

    <string name="accept_terms_and_conditions">I accept all the Terms and Conditions</string>
    <string name="continues">Continue</string>
    <string name="phone_number_or_email_id">Phone number or Email id</string>
    <string name="let_me_in">Let me in !</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_me_link">Send me link !</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="i_am_me_in">I am me in !</string>
    <string name="address">Address</string>
    <string name="email_id">Email id</string>
    <string name="adhar_card">Adhar card</string>
    <string name="gst_number">GST number</string>
    <string name="save">Save</string>
    <string name="offer_name">Offer name</string>
    <string name="menu_name">Enter Service name</string>
    <string name="current_price">Current Price</string>
    <string name="details">Details</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="amt">amt</string>
    <string name="organic_offers">organic offers</string>
    <string name="order_list">Order History</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="welcome">Welcome</string>
    <string name="total_pay">Total PAY</string>
    <string name="total_cod">Total COD</string>
    <string name="logout">Sign Out</string>
    <string name="want_to_app_logout">Are you sure?</string>
    <string name="how_you_want_to_reset_the_password">How you want to reset the password ?</string>


</resources>
