<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/app_logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_logo"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/txt_size_20"
                android:background="@drawable/shape_password_bg"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="@dimen/app_txt_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="@dimen/padding_7"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <EditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/padding_7"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/edt_email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="Email id"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/padding_7"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="12"
                        android:padding="@dimen/padding_7"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/shape_order_out_line"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:padding="@dimen/padding_7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:text="@string/i_am_me_in"
                        android:textSize="@dimen/txt_size_18"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
