<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg_new"
    android:orientation="vertical"
    tools:context=".activity.TermAndConditionActivity">

    <RelativeLayout
        android:id="@+id/rel_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_action_bar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wv_term_condition"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/my_order_bg_shap"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fadeScrollbars="false"
                android:scrollbarFadeDuration="0"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <WebView
                    android:id="@+id/web_term_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
        <!--<WebView
            android:id="@+id/wv_term_condition"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/my_order_bg_shap"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
        </WebView>-->

        <LinearLayout
            android:id="@+id/ll_tc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/tv_accept_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@assets/Ubuntu-Light"
                android:text="@string/accept_terms_and_conditions"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/shape_order_out_line"
            android:orientation="vertical"
            android:padding="@dimen/padding_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/continues"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_txt_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/staddle_merchant"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>