<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <RelativeLayout
        android:id="@+id/rel_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_add_offer_bg"
        android:padding="@dimen/padding_10">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_vector_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="@dimen/app_txt_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/border_line">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:riv_border_color="@android:color/white"
                    app:riv_border_width="2dp"
                    app:riv_corner_radius="15dp" />

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/iv_profile"
                    android:layout_alignBottom="@+id/iv_profile"
                    android:padding="5dp"
                    android:src="@drawable/ic_vector_camera"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/shape_border"
                    android:drawableStart="@drawable/ic_man_user"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/padding_5"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/shape_border"
                    android:drawableStart="@drawable/ic_maps_and_flags"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/padding_5"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@drawable/shape_border"
                    android:orientation="horizontal"
                    android:padding="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="+91"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_size_17" />

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:background="@null"
                        android:hint="Phone Number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </LinearLayout>


                <EditText
                    android:id="@+id/edt_phoneo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/shape_border"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:visibility="gone"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/shape_border"
                    android:drawableStart="@drawable/ic_envelope"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/padding_5"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/edt_adhar_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/shape_border"
                    android:drawableStart="@drawable/ic_id_card"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/adhar_card"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="12"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintColor" />

                <EditText
                    android:id="@+id/edt_gst_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/shape_border"
                    android:drawableStart="@drawable/ic_id_card"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/gst_number"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="15"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@drawable/shape_order_out_line"
                android:padding="@dimen/padding_7">

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/btn_txt_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>