<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_30"
                android:src="@drawable/app_logo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/shape_password_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/app_txt_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="Old Password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />


                    <EditText
                        android:id="@+id/edt_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_20"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="@string/new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                    <EditText
                        android:id="@+id/edt_conform_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_20"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:background="@drawable/shape_order_out_line"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding_10"
                        android:textColor="#FFF"
                        android:textColorHint="#FFF" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_40"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/shape_order_out_line"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:text="@string/save"
                        android:textColor="#FFF"
                        android:textSize="@dimen/btn_txt_size" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>